made first change to website template (replaced name)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>John Doe's Profile</title>
+  <title>Chris Lavell's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
@@ -10,15 +10,15 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="title">John Doe</li>
+          <li class="title">Chris Lavell</li>
           <li><a href="#">Home</a></li>
           <li><a href="#">Background</a></li>
         </ul>
     </div>
 
     <header>
-      <img src="https://picsum.photos/300/300" alt="Drawing of John Doe" class="profile-image">
-      <h1 class="tag title">Hello, I’m John.</h1>
+      <img src="https://picsum.photos/300/300" alt="Drawing of Chris Lavell" class="profile-image">
+      <h1 class="tag title">Hello, I’m Chris.</h1>
       <p class="tag location">My home is planet Earth.</p>
     </header>
 
@@ -50,7 +50,7 @@
         <li><a href="#" class="social linkedin">LinkedIn</a></li>
         <li><a href="#" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2015, John Doe</p>
+      <p class="copyright">Copyright 2015, Chris Lavell</p>
     </footer>
   </body>
   </html>
