added a new bg photo and changed some text

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
       <img src="https://picsum.photos/300/300" alt="Drawing of Chris Lavell" class="profile-image">
       <h1 class="tag title">Hello, I’m Chris.</h1>
-      <p class="tag location">My home is planet Earth.</p>
+      <p class="tag location">This is a test of github pages</p>
     </header>
 
     <main class="flex">
@@ -37,7 +37,7 @@
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
-          <li>Ruby</li>
+          <li>Ruby<span>Photo by <a href="https://unsplash.com/@ivybarn?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Ivy Barn</a> on <a href="https://unsplash.com/s/photos/escalator?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>/li>
           <li>Rails</li>
         </ul>
         <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
@@ -51,6 +51,7 @@
         <li><a href="#" class="social github">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2015, Chris Lavell</p>
+      <p class="copyright"><span>Photo by <a href="https://unsplash.com/@ivybarn?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Ivy Barn</a> on <a href="https://unsplash.com/s/photos/escalator?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
     </footer>
   </body>
   </html>
