Updated the text to better reflect myself

--- a/index.html
+++ b/index.html
@@ -25,22 +25,34 @@
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum esse mollitia sequi amet blanditiis quisquam illum rem aspernatur eligendi modi eum quis reiciendis fugit, consequatur commodi veniam inventore quaerat iste?</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet doloremque, beatae, iste nisi ipsum fuga natus alias soluta excepturi quibusdam ea, repellat exercitationem aperiam animi tempore magni sequi ducimus labore?</p>
-      </div> 
-
-      <div class="card">
-        <h2>Goals</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A molestias expedita illo perferendis, esse obcaecati repudiandae recusandae maiores assumenda modi laborum quos veniam asperiores error ea reiciendis rem, laudantium temporibus.</p>
-        <p>I'd like to learn:</p>
+        <p>I have some experience learning data science and software development I have some experience working in:</p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
-          <li>Ruby<span>Photo by <a href="https://unsplash.com/@ivybarn?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Ivy Barn</a> on <a href="https://unsplash.com/s/photos/escalator?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>/li>
-          <li>Rails</li>
+          <li>Java</li>
+          <li>Flutter</li>
+          <li>R</li>
+          <li>python machine learning</li>
+          <li>Tableau</li>
+          <li>D3.js</li>
+          <li>Excel (of course)</li>
+          <li>SQL</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+        
+      </div> 
+
+      <div class="card">
+        <h2>Goals</h2>
+        <p>There is still a lot to learn. I'm currently building a project of my own and incorporating design principles as I learn them.  </p>
+        <p>Technologies I'm learning right now include:</p>
+        <ul class="skills">
+          <li>Flutter</li>
+          <li>JavaFX</li>
+          <li>R</li>
+          <li>MongoDB</li>
+        </ul>
+      
       </div> 
 
     </main>
