updated links and the copyright date

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
     <footer>
       <ul>
         <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="linkedin.com/in/lavellc" class="social linkedin">LinkedIn</a></li>
+        <li><a href="https://github.com/clavell" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2015, Chris Lavell</p>
+      <p class="copyright">Copyright 2021, Chris Lavell</p>
       <p class="copyright"><span>Photo by <a href="https://unsplash.com/@ivybarn?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Ivy Barn</a> on <a href="https://unsplash.com/s/photos/escalator?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
     </footer>
   </body>
